# evidence-wiki

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Containerfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
domain-packs/: README.md
domain-packs/general-science/: README.md  claims.md  research.overlay.yml  taxonomy.md
domain-packs/legal-regulatory/: README.md  claims.md  research.overlay.yml  taxonomy.md
domain-packs/llm-research/: README.md  claims.md  research.overlay.yml  taxonomy.md
domain-packs/standards-compliance/: README.md  claims.md  research.overlay.yml  taxonomy.md
examples/urban-heat-resilience-workspace/: AGENTS.md  CLAUDE.md  README.md  index.md  log.md  research.yml  workspace-system.yml
orchestrator/: README.md
orchestrator/skills/: research-orchestrate.md
src/evidence_wiki/: __init__.py  cli.py  domain_pack_validator.py  orchestration.py  orchestration_schemas.py  resources.py
tests/: _mutation_fault_harness.py  test_academic_discovery.py  test_academic_ship_gate_replay.py  test_acquisition_transport.py  test_adversarial_sources.py  test_author_publications.py  test_authors_extraction.py  test_autonomous_workflow_fixture.py  test_candidate_lifecycle.py  test_chain_handoff_e2e.py  test_companion_discovery.py  test_containerfile.py  test_coverage_manifest.py  test_coverage_manifest_schema.py  test_cross_platform_behavior.py  test_discover_github.py  test_discover_sources.py  test_discovery_quality_eval.py  test_doctor.py  test_documented_workflows.py  test_domain_pack_validation.py  test_end_to_end_init_fixture.py  test_error_envelope.py  test_evidence_policies.py  test_export_answers.py  test_fetch_sources.py  test_fixture_licensing.py  test_fleet_status.py  test_generic_domain_hardening.py  test_handoff_signature.py  test_ingest_contract.py  test_init_research_workspace.py  test_installed_orchestration_smoke.py  test_intake_questions.py  test_inventory_normalization.py  test_jurisdictions.py  test_legal_discovery.py  test_legal_ranking.py  test_lint.py  test_madrid_autonomo_evaluation.py  (+48 more)
tests/fixtures/: fake_codex_cli.py  (+2 more)
tools/: scale_benchmark.py  score_eval_workspace.py  smoke_installed_orchestration.py  sync_vendored_scripts.py  validate_domain_pack.py
workspace-template/: .gitignore  AGENTS.md  README.md  index.md  log.md  research.yml  workspace-system.yml
(+343 files in other folders)
